<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.naufalprakoso.superheroapp.ui.detail.powerstats.PowerStatsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_intelligence"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/tvIntelligence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvIntelligence"
            android:text="@string/text_strength"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/tvStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvIntelligence"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStrength"
            android:text="@string/text_speed"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStrength"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSpeed"
            android:text="@string/text_durability"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/tvDurability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSpeed"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDurability"
            android:text="@string/text_power"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/tvPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDurability"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPower"
            android:text="@string/text_combat"
            android:textColor="@color/darkGrey" />

        <TextView
            android:id="@+id/tvCombat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPower"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</ScrollView>
